<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tt.tailoredtech.Activities.LoginActivity"
    android:background="@color/darkGray"
    android:orientation="vertical"
    android:paddingLeft="42dp"
    android:paddingRight="42dp"
    android:paddingTop="21dp"
    android:paddingBottom="31dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tv_signup_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/sign_up"
            android:textColor="@color/tv_signup_top_effects"
            android:textSize="17.6dp"
            android:clickable="true"
            android:textAllCaps="true"
            android:onClick="onSignUpClick"/>
        <TextView
            android:id="@+id/tv_tt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:text="@string/app_name"
            android:textSize="37.5dp"
            android:gravity="center"
            android:textColor="@color/white"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54.1dp"
            android:textColorHint="@color/pinkishGray">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="16.7sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34.8dp"
            android:textColorHint="@color/pinkishGray">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="16.7sp"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_signin_effects_signin_page"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/btn_signin_text_effects"
        android:textSize="14.6sp"
        android:enabled="false"/>

    <Button
        android:id="@+id/btnFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17.5dp"
        android:text="@string/fb_connect"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:textAllCaps="true"
        android:textSize="14.6sp"/>
    <TextView
        android:id="@+id/tv_sign_in_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_message"
        android:textColor="@color/pinkishGray"
        android:textSize="14.6dp"
        android:layout_marginTop="27.9dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:textColorHighlight="@color/pinkishGray"/>
</LinearLayout>