<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="42dp"
        android:background="@color/darkGray"
        android:orientation="vertical"
        tools:context="com.example.tt.tailoredtech.Activities.SignUpActivity">
        <TextView
            android:id="@+id/tv_tt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="37.5dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/pinkishGray">
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textSize="16.7sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textColorHint="@color/pinkishGray">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="16.7sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textColorHint="@color/pinkishGray">
            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob_hint"
                android:inputType="date"
                android:textColor="@color/white"
                android:textSize="16.7sp"
                android:focusable="false"
                android:longClickable="false"/>
        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="37dp"
            android:paddingLeft="8dp"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/rbtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rbtn_selector"
                android:text="@string/male"
                android:textColor="@color/rbtn_text_selector"
                android:textAllCaps="true"
                android:paddingLeft="30dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="onRadioClick"/>

            <RadioButton
                android:id="@+id/rbtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rbtn_selector"
                android:text="@string/female"
                android:textColor="@color/rbtn_text_selector"
                android:textAllCaps="true"
                android:paddingLeft="30dp"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:onClick="onRadioClick"/>
        </RadioGroup>
        <Spinner
            android:id="@+id/spinner_experiance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>
        <Spinner
            android:id="@+id/spinner_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/pinkishGray">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="16.7sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/pinkishGray">
            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="16.7sp" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48.4dp"
            android:background="@drawable/btn_signin_effects_signin_page"
            android:enabled="false"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/lemon"
            android:textSize="14.6sp" />
        <TextView
            android:id="@+id/tv_sign_in_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27.9dp"
            android:text="@string/sign_in_message"
            android:textColor="@color/pinkishGray"
            android:textColorHighlight="@color/black"
            android:textSize="14.6dp"
            android:layout_gravity="center"
            android:clickable="true"/>
    </LinearLayout>
</ScrollView>